[package]
name = "advent-of-code-2016"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { git = "https://github.com/rudyhb/utils.git" }
lazy_static = "1.4.0"
rayon = "1.5.1"
regex = "1.5.4"
md5 = "0.7.0"